# XiaojiBike

./: .dockerignore  .gitignore  DISCLAIMER.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  package.json
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: funds.py  router.py
backend/app/core/: config.py
backend/app/schemas/: common.py  funds.py
backend/app/services/: fund_data_service.py  fund_parsers.py
backend/app/tests/: test_app.py
data/: fund_candidates.json
docs/: OPEN_SOURCE_COMPLIANCE.md  QUICK_START.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: PageHeader.tsx
frontend/src/pages/: FundScreener.tsx
frontend/src/utils/: format.ts
scripts/: build-multiarch.sh  dev-local.sh  test-dev-local.sh
