[project]
name = "xiaojibike-backend"
version = "0.1.0"
description = "Standalone OTC fund screener backend"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "akshare>=1.18,<2",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "pandas>=2.2,<3",
  "pydantic-settings>=2.6,<3",
  "requests>=2.32,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["..", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
